--- a/src/components/AddRoom/addRoom.module.scss
+++ b/src/components/AddRoom/addRoom.module.scss
@@ -23,8 +23,10 @@
       }
 
       .roomName {
-        margin-left: 124px;
-        display: block;
+        // margin-left: 124px;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
         width: 703px;
         height: 83px;
         border-radius: 10px;
@@ -50,6 +52,30 @@
         width: 219px;
         height: 83px;
         background-color: #eeeeee;
+      }
+
+      .timeWrapper {
+        display: inline;
+      }
+
+      .time {
+        // margin-left: 124px;
+        margin-left: 30px;
+        margin-right: 50px;
+        
+        flex-direction: row;
+        width: 93px;
+        height: 83px;
+        border-radius: 10px;
+        font-size: 25px;
+        text-align: center;
+        
+        background-color: #eeeeee;
+      }
+
+      .timeText {
+        font-size: 25px;
+        font-weight: 800;
       }
 
       
