--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 :root {
+  width: 100%;
+  height: 100%;
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -26,6 +28,7 @@ a:hover {
 body {
   display: flex;
   place-items: center;
+  width: 100%;
   height: 100%;
   margin: 0;
 }
