--- a/src/routes/MainPage/mainPage.module.scss
+++ b/src/routes/MainPage/mainPage.module.scss
@@ -22,6 +22,15 @@
         color: black;
       }
 
+      .enter {
+        position: relative;
+        left: 620px;
+        width: 154px;
+        height: 64px;
+        background-color: #7F9593;
+        color: #ffffff;
+      }
+
       .roomWrapper {
         width: 100%;
         margin-top: 20px;
