--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* stylelint-disable scale-unlimited/declaration-strict-value */
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
