--- a/src/routes/LoginPage/loginPage.module.scss
+++ b/src/routes/LoginPage/loginPage.module.scss
@@ -16,7 +16,7 @@
         border-radius: 0 20px 20px 0;
   
         .title {
-          margin-top: 70px;
+          margin-top: 100px;
           font-size: 35px;
           font-weight: 800;
           color: black;
@@ -24,7 +24,7 @@
 
         .id {
             text-align: center;
-            margin-top: 30px;
+            margin-top: 50px;
             margin-left: 280px;
             width: 600px;
             height: 100px;
@@ -43,17 +43,6 @@
             border-style: none;
             background-color: #e9e9e9;
             font-size: 42px;
-        }
-
-        .username {
-            text-align: center;
-            margin-top: 10px;
-            margin-left: 280px;
-            width: 600px;
-            height: 100px;
-            border-style: none;
-            background-color: #e9e9e9;
-            font-size: 42px;
             border-radius: 0px 0px 20px 20px;
         }
 
@@ -63,9 +52,19 @@
             margin-left: 540px;
             width: 100px;
             height: 50px;
-            font-weight: 800px;
             font-size: 20px;
+            font-weight: 800px;
             background-color: #7F9593;
+        }
+
+        .signUpButton {
+            margin-top: 10px;
+            margin-left: 515px;
+            width: 150px;
+            height: 30px;
+            font-size: 20px;
+            text-decoration: underline;
+            background-color: #FFFFFF;
         }
 
         }
