--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,16 @@
 /* stylelint-disable scale-unlimited/declaration-strict-value */
-:root {
+
+html {
   width: 100%;
   height: 100%;
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
-  color: rgba(255, 255, 255, 87%);
-  background-color: #242424;
-  color-scheme: light dark;
-  font-synthesis: none;
-  text-rendering: optimizelegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-size-adjust: 100%;
+}
+
+#root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 a {
